2020-10-30
Implemented two machine configuration using NFS for mpd

2020-09-30
Raspberry Pi 4B running on Kernel 4.9.y

2020-08-12
Use additional kernel parameters for booting multiprocessor systems
  isolcpus=N -- isolate cpu #N
  rcu_nocbs=N -- isolate cpu #N from RCU callbacks
  nohz_full=N -- enable NOHZ_FULL; parameter must match parameter isolcpus

2020-03-23
Nabla on Raspberry Pi 4B.

2020-03-16
Remove swapon /swapoff

2020-03-15
Adapt Linux firmware inclusion. Copy only firmware configured in the kernel config. 

2020-02-13
Switch to mainline kernel tree 5.4.y

2020-01-11
Remove module load interface, since all projects now use mdev. 

2019-11-15
Patch OpenSSL library to to circumnavigate the boottime entropy starvation problem

2019-04-03
Upgrade to mpd version 0.21

2019-30-12
Adapt to new Buildroot fftw package architecture

2019-01-21
Set timer frequencies on startup

2018-11-10
Use CPU isolation on multiprocessor systems

2018-10-13
Include rt-tests package in projects using uClibC

2018-04-20
Adapt mpd configuration to new Buildroot Layout. New standard configuration is

  storage ::= local
  neighbour ::= upnp
  input ::= curl, file
  decoder ::= flac, dsdiff, dsf, mad, sndfile
  encoder ::= 
  resampler ::= libsamplerate, soxr
  output ::= alsa

2018-04-15
Switch 32-bit Intel configuration to 3.18.y kernel tree

2018-04-08
Calculate cumulative latency value in interbench

2018-03-10
Integrated Yan's realtime patch in mpd build

2017-08-30
Optimize realtime configuration

2017-03-05
Removed bug in interbench: standard deviation was calculated incorrectly

2017-02-24
nabla running on Alix.2. Major changes to Buildroot configuration to accomodate hierarchical configurations (separate Nabla specific from board specific configurations)

2016-06-12
Modified Buildroot configuration to use BR2_EXTERNAL

2016-06-11
Changes for Minix Neo Z64

2016-04-17
Switch to mainline kernel tree 4.4.y
From now on, only LTS kernels will be used

2016-01-31