@@ -1,85 +1,56 @@
-# An example configuration file for MPD.
+# Minimum configuration file for MPD.
 # Read the user manual for documentation: http://www.musicpd.org/doc/user/
 
 # Files and directories #######################################################
 music_directory	"/var/lib/mpd/music"
 playlist_directory	"/var/lib/mpd/playlists"
-db_file	"/var/lib/mpd/tag_cache"
+db_file	"/var/lib/mpd/music_db"
 log_file	"/var/log/mpd/mpd.log"
 pid_file		"/var/run/mpd/pid"
 state_file	"/var/lib/mpd/state"
-sticker_file	"/var/lib/mpd/sticker.sql"
 
 # General music daemon options ################################################
 user				"mpd"
-#group				"nogroup"
-#bind_to_address		"any"
-#port				"6600"
-#log_level			"default"
-#auto_update	"yes"
-#auto_update_depth "3"
+bind_to_address		"any"
+# auto_update	"yes"
+# auto_update_depth "3"
 
-# Symbolic link behavior ######################################################
-#follow_outside_symlinks	"yes"
-#follow_inside_symlinks		"yes"
-
-# Zeroconf / Avahi Service Discovery ##########################################
-#zeroconf_enabled		"yes"
-#zeroconf_name			"Music Player @ %h"
-
-### MPD Internal Buffering ###################################################
-#audio_buffer_size	"4096"
-
-### Resource Limitations #####################################################
-#connection_timeout	"60"
-#max_connections		"5"
-# max_playlist_length	"4096"
-# max_command_list_size	"2048"
-# max_output_buffer_size	"8192"
+### MPD Internal Buffering ####################################################
+# audio_buffer_size	"4096"
 
 # Character Encoding ##########################################################
-#filesystem_charset	"UTF-8"
+# filesystem_charset	"UTF-8"
 
-# Normalization automatic volume adjustments ##################################
-#replaygain			"album"
-#replaygain_preamp		"0"
-#replaygain_missing_preamp	"0"
-#replaygain_limit		"yes"
-#volume_normalization		"no"
-
-### Resampler ################################################################
+### Resampler #################################################################
 resampler {
    plugin "soxr"
    quality "very high"
 }
 
-### Jan's real time patch ####################################################
+### Jan's real time patch #####################################################
 realtime_option {
 	memlock	"yes"
 	stack_reserve	"1024"
 	heap_reserve	"0"
     
-	rtio_priority	"FIFO:49"
-	player_priority	"FIFO:49"
-	decoder_priority	"FIFO:49"
-	output_priority	"OTHER:49"
+	io_priority	"OTHER:0"
+	rtio_priority	"FIFO:2"
+	main_priority	"OTHER:0"
+	player_priority	"FIFO:2"
+	decoder_priority	"FIFO:2"
+	update_priority	"OTHER:0
 }
                                                                               
+### Input cache ###############################################################
+input_cache {
+	size "512 MB"
+}
+
 # Audio Output ################################################################
-# USB adapter Mutec MC-3+USB
 audio_output {
 	type		"alsa"
 	name		"USB"
 	device		"hw:0,0"	 
-	period_time	"5000"
-	buffer_time	"500000"
-#	mixer_type      "hardware"
-#	mixer_device    "hw:CARD=M20"
-#	mixer_control   "MC-3+ Smart Clock USB 2.0 "
-#	mixer_index     "1"
-	auto_channels	"no"
-	auto_format	"no" 
-	auto_resample	"no"
 	dsd_usb		"yes"
-	priority	"FIFO:49"
+	priority	"FIFO:2"
 }
